c4prj2_input/grade.txt
Grading at Tue Mar 30 04:54:43 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:46:7: error: ‘n_hand’ undeclared (first use in this function)
     (*n_hand)++;
       ^
input.c:46:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
